package app;

public class Cappuccino implements Coffee {

    @Override
    public void makeCoffee() {
        System.out.println("Your Cappuccino. Enjoy :)");
    }
}