package app;

public interface Coffee {

    void makeCoffee();
}
