package app;

public class Espresso implements Coffee {

    @Override
    public void makeCoffee() {
        System.out.println("Your Espresso. Enjoy :)");
    }
}
