package app;

public class Latte implements Coffee {

    @Override
    public void makeCoffee() {
        System.out.println("Your Latte. Enjoy :)");
    }
}
